Fix science section lab bg to fill full section height on mobile
Use top/right/bottom/left: 0 instead of width/height: 100%.

--- a/css/style.css
+++ b/css/style.css
@@ -2246,9 +2246,8 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
+    right: 0;
+    bottom: 0;
     background: url('../assets/images/lab-bg.png') center center / cover no-repeat;
     opacity: 0.1;
     z-index: 0;
